--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LeafyLove.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:LeafyLove.Utilities"
+        xmlns:local="clr-namespace:LeafyLove.ViewModels"
         xmlns:controls="clr-namespace:LeafyLove.Views"
         xmlns:utilities ="clr-namespace:LeafyLove.Utilities"
         Title="Виртуальное растение" Height="800" Width="1280">
@@ -36,8 +36,7 @@
             </Style.Triggers>
         </Style>
 
-        <local:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
-        <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <utilities:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
     </Window.Resources>
     <TabControl>
         <TabControl.Background>
@@ -47,7 +46,7 @@
             </LinearGradientBrush>
         </TabControl.Background>
         <!-- Вкладка с растениями -->
-        <TabItem Header="Главная">
+        <TabItem x:Name="MainTab" Header="Главная">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
                 <ItemsControl ItemsSource="{Binding User.Plants}">
                     <ItemsControl.ItemsPanel>
@@ -85,23 +84,21 @@
                                         <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
 
                                         <!-- Изображение растения -->
-                                        <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0">
-                                            <Image.Style>
-                                                    <Style TargetType="Image">
-                                                        <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                        <Style.Triggers>
-                                                            <DataTrigger Binding="{Binding Stage}" Value="Seed">
-                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                            </DataTrigger>
-                                                            <DataTrigger Binding="{Binding Stage}" Value="Sprout">
-                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Sprout.png"/>
-                                                            </DataTrigger>
-                                                            <DataTrigger Binding="{Binding Stage}" Value="Mature">
-                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Mature.png"/>
-                                                            </DataTrigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </Image.Style>
+                                        <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0" Source="{Binding ImagePath}">
+                                            <Image.Triggers>
+                                                <EventTrigger RoutedEvent="Image.Loaded">
+                                                    <BeginStoryboard>
+                                                        <Storyboard>
+                                                            <!-- Анимация высоты -->
+                                                            <DoubleAnimation Storyboard.TargetProperty="Height"
+                                     From="50" To="180" Duration="0:0:5" />
+                                                            <!-- Анимация ширины, если необходимо -->
+                                                            <DoubleAnimation Storyboard.TargetProperty="Width"
+                                     From="50" To="300" Duration="0:0:5" />
+                                                        </Storyboard>
+                                                    </BeginStoryboard>
+                                                </EventTrigger>
+                                            </Image.Triggers>
                                         </Image>
 
                                        
