--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LeafyLove.ViewModels"
-        xmlns:controls="clr-namespace:LeafyLove.Views"
         xmlns:utilities ="clr-namespace:LeafyLove.Utilities"
         Title="Виртуальное растение" Height="800" Width="1280">
     <Window.Background>
@@ -101,7 +100,7 @@
                                             </Image.Triggers>
                                         </Image>
 
-                                       
+
                                         <!-- Индикаторы здоровья и уровня воды -->
                                         <StackPanel Margin="3">
                                             <TextBlock Text="Здоровье" FontSize="12" FontWeight="Bold"/>
@@ -130,8 +129,65 @@
         </TabItem>
 
         <!-- Вкладка магазина -->
-        <TabItem Header="Магазин">
-            <!-- Содержимое магазина -->
+        <TabItem x:Name="StoreTab" Header="Магазин">
+            <Grid>
+                <TextBlock Text="{Binding MainUser.Money, StringFormat='Баланс: {0}'}" 
+                   FontSize="16" FontWeight="Bold" 
+                   HorizontalAlignment="Right" VerticalAlignment="Top" 
+                   Margin="2" />
+                
+                <TabControl>
+                    <!-- Вкладка с цветами -->
+                    <TabItem Header="Цветы">
+                        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                            <ItemsControl ItemsSource="{Binding FlowerItems}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Columns="4"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10" Margin="5" MaxHeight="300" VerticalAlignment="Top">
+                                            <StackPanel>
+                                                <Image Source="{Binding ImagePath}" Height="100" Width="300" />
+                                                <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="14" Margin="5"/>
+                                                <TextBlock Text="{Binding Price, StringFormat='Цена: {0}'}" FontSize="12" Margin="5"/>
+                                                <Button Content="Купить" Command="{Binding DataContext.PurchaseCommand, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" CommandParameter="{Binding}" Margin="5"/>
+                                            </StackPanel>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </ScrollViewer>
+                    </TabItem>
+
+                    <!-- Вкладка с инструментами -->
+                    <TabItem Header="Инструменты">
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <ItemsControl ItemsSource="{Binding ToolItems}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Columns="4"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10" Margin="5" MaxHeight="180" VerticalAlignment="Top">
+                                            <StackPanel>
+                                                <Image Source="{Binding ImagePath}" Height="100" Width="100" />
+                                                <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="14" Margin="5"/>
+                                                <TextBlock Text="{Binding Price, StringFormat='Цена: {0}'}" FontSize="12" Margin="5"/>
+                                                <Button Content="Купить" Command="{Binding DataContext.PurchaseCommand, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" CommandParameter="{Binding}" Margin="5"/>
+                                            </StackPanel>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </ScrollViewer>
+                    </TabItem>
+                </TabControl>
+            </Grid>
         </TabItem>
     </TabControl>
 </Window>
