--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -123,6 +123,8 @@
                                                 <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ActionButtonStyle}"/>
                                             </StackPanel>
 
+                                            <Button Content="Продать"  Command="{Binding DataContext.SellPlantCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Style="{StaticResource ActionButtonStyle}"  CommandParameter="{Binding}" />
+
                                         </StackPanel>
 
 
@@ -170,7 +172,7 @@
 
                         <!-- Вкладка с инструментами -->
                         <TabItem Header="Инструменты">
-                            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                                 <ItemsControl ItemsSource="{Binding ToolItems}">
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
@@ -179,9 +181,9 @@
                                     </ItemsControl.ItemsPanel>
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10" Margin="5" MaxHeight="180" VerticalAlignment="Top">
+                                            <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10" Margin="5" MaxHeight="300" VerticalAlignment="Top">
                                                 <StackPanel>
-                                                    <Image Source="{Binding ImagePath}" Height="100" Width="100" />
+                                                    <Image Source="{Binding ImagePath}" Height="100" Width="300" />
                                                     <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="14" Margin="5"/>
                                                     <TextBlock Text="{Binding Price, StringFormat='Цена: {0}'}" FontSize="12" Margin="5"/>
                                                     <Button Content="Купить" Command="{Binding DataContext.PurchaseCommand, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" CommandParameter="{Binding}" Margin="5"/>
