--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -36,6 +36,8 @@
         </Style>
 
         <utilities:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
+        <utilities:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+        <utilities:BooleanToThicknessConverter  x:Key="BooleanToThicknessConverter"/>
     </Window.Resources>
     <StackPanel>
         <Menu VerticalAlignment="Top">
@@ -71,7 +73,7 @@
                                         <ImageBrush ImageSource="{Binding DataContext.CurrentBackground, RelativeSource={RelativeSource AncestorType=Window}}" 
                                         Stretch="UniformToFill" 
                                         AlignmentX="Center" 
-                                        AlignmentY="Center"/>
+                                        AlignmentY="Top"/>
                                     </Border.Background>
                                     <Grid>
                                         <StackPanel MinWidth="300" MinHeight="600" Orientation="Vertical" VerticalAlignment="Stretch" MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
@@ -86,26 +88,23 @@
                                             </StackPanel.Style>
 
                                             <!-- Название растения -->
-                                            <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                <TextBox Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"
+                                                         IsReadOnly="{Binding Path=IsEditing, Converter={StaticResource InverseBooleanConverter}}"
+                                                         BorderThickness="{Binding Path=IsEditing, Converter={StaticResource BooleanToThicknessConverter}}"
+                                                         Background="Transparent" />
+                                                <Button Command="{Binding DataContext.BeginEditCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                                        CommandParameter="{Binding}"
+                                                        Content="✎"
+                                                        Width="20" Height="20"
+                                                        ToolTip="Переименовать" 
+                                                        Background="Transparent" />
+                                            </StackPanel>
 
                                             <!-- Изображение растения -->
-                                            <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0" Source="{Binding ImagePath}">
-                                                <Image.Triggers>
-                                                    <EventTrigger RoutedEvent="Image.Loaded">
-                                                        <BeginStoryboard>
-                                                            <Storyboard>
-                                                                <!-- Анимация высоты -->
-                                                                <DoubleAnimation Storyboard.TargetProperty="Height"
-                                     From="50" To="180" Duration="0:0:5" />
-                                                                <!-- Анимация ширины, если необходимо -->
-                                                                <DoubleAnimation Storyboard.TargetProperty="Width"
-                                     From="50" To="300" Duration="0:0:5" />
-                                                            </Storyboard>
-                                                        </BeginStoryboard>
-                                                    </EventTrigger>
-                                                </Image.Triggers>
-                                            </Image>
+                                            <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0" Source="{Binding ImagePath}"/>
 
+                                            <Image x:Name="coinImage" Source="coin.png" Opacity="0" Height="50" Width="50"/>
 
                                             <!-- Индикаторы здоровья и уровня воды -->
                                             <StackPanel Margin="3">
