--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -55,7 +55,7 @@
             <!-- Вкладка с растениями -->
             <TabItem x:Name="MainTab" Header="Главная">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-                    <ItemsControl ItemsSource="{Binding User.Plants}">
+                    <ItemsControl ItemsSource="{Binding MainUser.Plants}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <UniformGrid Columns="4"/>
@@ -102,9 +102,11 @@
                                             </StackPanel>
 
                                             <!-- Изображение растения -->
-                                            <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0" Source="{Binding ImagePath}"/>
+                                            <Image x:Name="coinImage" Source="pack://application:,,,/LeafyLove;component/Resources/Images/coin.png" Opacity="0" Height="50" Width="50"/>
+                                            
+                                            <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,180,0,0" Source="{Binding ImagePath}"/>
 
-                                            <Image x:Name="coinImage" Source="coin.png" Opacity="0" Height="50" Width="50"/>
+                                            
 
                                             <!-- Индикаторы здоровья и уровня воды -->
                                             <StackPanel Margin="3">
